fix: redesign of language selector
Implement redesign of language selector and related interactions.
This also includes a change to how the underlying grid is implemented.

Part of #1486

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,7 +52,8 @@
     />
     <link rel="canonical" href="https://developer.mozilla.org" />
     <style media="print">
-      .breadcrumbs-locale-container,
+      .breadcrumbs-container,
+      .language-toggle,
       .document-toc-container,
       .on-github,
       nav.sidebar,
