correct test fixtures

--- a/testing/archived-content/files/en-us/xul/index.html
+++ b/testing/archived-content/files/en-us/xul/index.html
@@ -1,6 +1,6 @@
 ---
 title: Ancient XUL Thing
-slug: XUL/ancientness
+slug: XUL
 summary: >-
   A sample archive content page
 tags:
@@ -9,7 +9,7 @@ tags:
 
 <div class="noinclude">
   <span class="breadcrumbs xulRefAttr_breadcrumbs"
-    >« <a href="/en-US/docs/XUL/ancientness">Ancient XUL Thing</a></span
+    >« <a href="/en-US/docs/XUL">Ancient XUL Thing</a></span
   >
 </div>
 <p>This is considered ancient and has no macros in it.</p>
