Image flaw checking should be different for translated content
Part of #3174

--- a/testing/translated-content/files/fr/web/foo/index.html
+++ b/testing/translated-content/files/fr/web/foo/index.html
@@ -5,3 +5,8 @@ translation_of: Web/Foo
 ---
 
 <p>Foë</p>
+
+<figure>
+  <img src="screenshot.png" alt="Capture d'écran des couleurs" />
+  <figcaption>Une image parfaitement normale</figcaption>
+</figure>
