update print style rules

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -62,11 +62,11 @@
       ul.prev-next {
         display: none !important;
       }
-      .article,
-      .article pre {
+      .main-page-content,
+      .main-page-content pre {
         padding: 2px;
       }
-      .article pre {
+      .main-page-content pre {
         border-left-width: 2px;
       }
     </style>
