--- a/testing/content/files/en-us/web/empty_image/index.html
+++ b/testing/content/files/en-us/web/empty_image/index.html
@@ -8,3 +8,10 @@ slug: Web/Empty_image
   <img src="">
   Pretty nihilistic, eh?
 </p>
+
+<p>
+  This one is based on make sure we've solved:
+  <a href="https://github.com/mdn/yari/issues/3186">issue#3186</a>
+</p>
+
+<img src="#anchor">
