--- a/testing/content/files/en-us/web/images/bad_src/index.html
+++ b/testing/content/files/en-us/web/images/bad_src/index.html
@@ -7,7 +7,7 @@ slug: Web/Images/Bad_src
 <img src="actuallynota.svg">
 
 <!-- resolves, intially, to a directory -->
-<img src="/en-us/xxx">
+<img src="/en-us/web">
 
 <!-- actually isn't a valid PNG -->
 <img src="actuallynota.png">
