--- a/testing/content/files/en-us/web/unsafe_html/index.html
+++ b/testing/content/files/en-us/web/unsafe_html/index.html
@@ -6,7 +6,7 @@ slug: Web/Unsafe_HTML
 <p>This page contains various nasty snippets of HTML that is expected to be caught as "unsafe".</p>
 
 <p>
-  Much inspiration from this comes from:
+  Much of the inspiration for this comes from:
   <a href="https://github.com/payloadbox/xss-payload-list/blob/master/README.md">
     https://github.com/payloadbox/xss-payload-list
   </a>
