--- a/testing/content/files/en-us/web/unsafe_html/index.html
+++ b/testing/content/files/en-us/web/unsafe_html/index.html
@@ -3,7 +3,7 @@ title: Unsafe HTML
 slug: Web/Unsafe_HTML
 ---
 
-<p>This page contains various nasty snippets of HTML that is expected to be caught as "unsafe".</p>
+<p>This page contains various nasty snippets of HTML that are expected to be caught as "unsafe".</p>
 
 <p>
   Much of the inspiration for this comes from:
