--- a/testing/content/files/en-us/web/unsafe_html/index.html
+++ b/testing/content/files/en-us/web/unsafe_html/index.html
@@ -20,6 +20,8 @@ slug: Web/Unsafe_HTML
 
 <iframe src="https://www.peterbe.com/"></iframe>
 
+<iframe src="//evil.com/"></iframe>
+
 <p>Here's a link that contains the string <code>:JavaScript</code> within the <code>href</code>
 attribute:<br>
   <a href="https://wiki.mozilla.org/JavaScript:New_to_SpiderMonkey">
