Add OpenSearch support

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,20 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- OpenSearch -->
+    <link
+      rel="search"
+      type="application/opensearchdescription+xml"
+      title="MDN Web Docs"
+      href="https://developer.mozilla.org/en-US/search/xml"
+    />
+
+    <Url
+      type="application/opensearchdescription+xml"
+      rel="self"
+      template="https://developer.mozilla.org/en-US/search/xml"
+    />
+
     <script>
       // Only include the polyfill for browsers that seem to not have
       // certain JS features. E.g. Firefox 58.
