findByURL requires URL to contain /docs/

--- a/testing/content/files/en-us/web/homepage_links/index.html
+++ b/testing/content/files/en-us/web/homepage_links/index.html
@@ -23,3 +23,9 @@ slug: Web/Homepage_links
 <p>
   <a href="/notalocale/"><code>/notalocale/</code></a> - not a valid locale
 </p>
+<p>
+  <a href="/#anchor"><code>/#anchor</code></a> - perfect but with hash
+</p>
+<p>
+  <a href="/en-US/#anchor"><code>/en-US/#anchor</code></a> - perfect but with hash
+</p>
