Add browser-specs data; update tests; update renderer

--- a/testing/content/files/en-us/web/spec_table_extraction/index.html
+++ b/testing/content/files/en-us/web/spec_table_extraction/index.html
@@ -1,6 +1,6 @@
 ---
 title: Spec table extraction
-browser-compat: javascript.operators.optional_chaining
+browser-compat: javascript.builtins.Array.toLocaleString
 slug: Web/Spec_Table_Extraction
 ---
 
