--- a/testing/content/files/en-us/web/brokenlinks/index.html
+++ b/testing/content/files/en-us/web/brokenlinks/index.html
@@ -26,3 +26,5 @@ slug: Web/BrokenLinks
 <p><a href='/en-US/docs/Hopeless/Case'>Will not have a suggestion</></p>
 
 <p><a href="//www.peterbe.com">Leave me alone! I'm actually external</a></p>
+
+<p><a href="/en-US/docs/Web/BrokenLinks">Link to itself</a></p>
