--- a/testing/content/files/en-us/web/brokenlinks/index.html
+++ b/testing/content/files/en-us/web/brokenlinks/index.html
@@ -27,4 +27,8 @@ slug: Web/BrokenLinks
 
 <p><a href="//www.peterbe.com">Leave me alone! I'm actually external</a></p>
 
-<p><a href="/en-US/docs/Web/BrokenLinks">Link to itself</a></p>
+<p>
+  <a href="/en-US/docs/Web/BrokenLinks">Link to itself (bad)</a><br>
+  <a href="/en-US/docs/Web/BrokenLinks#anchor">Link to itself for anchor (good)</a><br>
+  <a href="#anchor">Link to itself for anchor (good)</a>
+</p>
