contributors URL's are incorrectly considered broken
Fixes #3446

--- a/testing/content/files/en-us/web/brokenlinks/index.html
+++ b/testing/content/files/en-us/web/brokenlinks/index.html
@@ -32,3 +32,7 @@ slug: Web/BrokenLinks
   <a href="/en-US/docs/Web/BrokenLinks#anchor">Link to itself for anchor (good)</a><br>
   <a href="#anchor">Link to itself for anchor (good)</a>
 </p>
+
+<p>
+  <a href="/en-US/docs/Web/BrokenLinks/contributors.txt">Link to <code>/contributors.txt</code></a> (not a flaw)
+</p>
