http links should be considered a flaw
Fixes #3565

--- a/testing/content/files/en-us/web/brokenlinks/index.html
+++ b/testing/content/files/en-us/web/brokenlinks/index.html
@@ -36,3 +36,7 @@ slug: Web/BrokenLinks
 <p>
   <a href="/en-US/docs/Web/BrokenLinks/contributors.txt">Link to <code>/contributors.txt</code></a> (not a flaw)
 </p>
+
+<p>
+  <a href="http://www.mozilla.org"><code>http://</code> external link</a>
+</p>
