optimize how we set the shortcut icon
Part of #3611

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!--
+      Note that our build process will rewrite this 'href' value to a copy
+      of the file that has a hash in it.
+    -->
+
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+    />
+
     <!-- third-generation iPad with high-resolution Retina display: -->
     <link
       rel="apple-touch-icon-precomposed"
