--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
     />
 
     <meta name="theme-color" content="#ffffff" />
