--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -50,6 +50,34 @@
       name="description"
       content="The MDN Web Docs site provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and progressive web apps."
     />
+
+    <!--
+      Why these Open Graph meta tags? ...when the '<title>' and '<meta name=description>'
+      already exist?
+      Well, because of Twitter.
+      When you paste in an MDN URL into Twitter it will not make a "card".
+      See this comment: https://github.com/mdn/yari/issues/3590#issuecomment-825153396
+
+      According to Twitter's documentation on "Cards" they will use their proprietary
+      tags (e.g. `<meta name="twitter:card" content="summary">`) but if not available
+      they will fall back to Open Graph meta tags.
+      See https://developer.twitter.com/en/docs/twitter-for-websites/cards/guides/getting-started#opengraph
+
+      It is a lot of repetition and additional bloat to the index.html files. But
+      keep in mind that repeated strings of texts compresses very well and most
+      clients will only download the Gzip or Brotli compressed HTML file.
+
+      Remember, all of these are *default* values. The actual values are processed in
+      ssr/render.js and uses cheerio to replace the content on all of these.
+    -->
+    <meta property="og:url" content="https://developer.mozilla.org" />
+    <meta property="og:title" content="MDN Web Docs" />
+    <meta
+      property="og:description"
+      content="The MDN Web Docs site provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and progressive web apps."
+    />
+    <meta property="og:locale" content="en-US" />
+
     <link rel="canonical" href="https://developer.mozilla.org" />
     <style media="print">
       .breadcrumbs-container,
