--- a/testing/content/files/en-us/web/spec_section_extraction/index.html
+++ b/testing/content/files/en-us/web/spec_section_extraction/index.html
@@ -1,7 +1,7 @@
 ---
-title: Spec table extraction
+title: Spec section extraction
 browser-compat: javascript.builtins.Array.toLocaleString
-slug: Web/Spec_Table_Extraction
+slug: Web/Spec_Section_Extraction
 ---
 
 <h2>Intro</h2>
@@ -9,7 +9,7 @@ slug: Web/Spec_Table_Extraction
 
 <h2 id="Specifications">Specifications</h2>
 
-<p>{{SpecificationTable}}</p>
+<p>{{Specifications}}</p>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
