add favicon-48x48.png for the new default favicon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,11 +9,7 @@
       of the file that has a hash in it.
     -->
 
-    <link
-      rel="shortcut icon"
-      href="%PUBLIC_URL%/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-48x48.png" />
 
     <!-- third-generation iPad with high-resolution Retina display: -->
     <link
