rename, add 192x192, and rearrange tests

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,12 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="%PUBLIC_URL%/favicon-192x192.png"
+    />
 
     <meta name="theme-color" content="#ffffff" />
 
