--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,32 +11,7 @@
 
     <link rel="icon" href="%PUBLIC_URL%/favicon-48x48.png" />
 
-    <!-- third-generation iPad with high-resolution Retina display: -->
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="144x144"
-      href="%PUBLIC_URL%/favicon144.png"
-    />
-
-    <!-- iPhone with high-resolution Retina display: -->
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="114x114"
-      href="%PUBLIC_URL%/favicon114.png"
-    />
-
-    <!-- first- and second-generation iPad: -->
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="72x72"
-      href="%PUBLIC_URL%/favicon72.png"
-    />
-
-    <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <link
-      rel="apple-touch-icon-precomposed"
-      href="%PUBLIC_URL%/favicon57.png"
-    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
 
     <meta name="theme-color" content="#ffffff" />
 
