add twitter:card HTML meta tag
Fixes #3693

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -60,6 +60,7 @@
     />
     <meta property="og:locale" content="en-US" />
     <meta property="og:image" content="%PUBLIC_URL%/mdn-social-share.png" />
+    <meta property="twitter:card" content="summary_large_image" />
 
     <link rel="canonical" href="https://developer.mozilla.org" />
     <style media="print">
