--- a/testing/content/files/en-us/web/brokenlinks/index.html
+++ b/testing/content/files/en-us/web/brokenlinks/index.html
@@ -40,3 +40,9 @@ slug: Web/BrokenLinks
 <p>
   <a href="http://www.mozilla.org"><code>http://</code> external link</a>
 </p>
+
+<p>
+  <a href="https://www.ecma-international.org/ecma-262/6.0/#sec-get-%typedarray%.prototype.buffer">
+    A hyperlink you can't run <code>decodeURI</code> on</a>.<br>
+  This demonstrates the fix in <a href="https://github.com/mdn/yari/issues/4109">issue#4109</a>.
+<p>
