Link to opensearch file in html
Signed-off-by: Binyamin Aron Green <binyamingreen@protonmail.com>

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,13 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link
+      rel="search"
+      type="application/opensearchdescription+xml"
+      href="/opensearch.xml"
+      title="MDN Web Docs"
+    />
+
     <script>
       // Only include the polyfill for browsers that seem to not have
       // certain JS features. E.g. Firefox 58.
